# publictransport-applet

./: CMakeLists.txt  README.md  no_ruter.pts
timetable/: metadata.desktop
timetable/contents/ui/: CheckServiceproviders.qml  ConfigServiceproviders.qml  GtfsService.qml  GtfsServiceDelegate.qml  Timetable.qml  TimetableDelegate.qml  main.qml
